<resources>
    <string name="app_name">FEED</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="feed">feed</string>
    <string name="scanner">scanner</string>
    <string name="gifts">gifts</string>
    <string name="profile">profile</string>
    <string name="stories">stories</string>
    <string name="campaigns">campaigns</string>
    <string name="name">FRANCISCO WATSON</string>
    <string name="status">TODAY, 10:52PM</string>
    <string name="send_a_gift">send a gift</string>
</resources>
