<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="homework.diana_petrova.softuni.task4.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/colorWhite"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_bar_upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:background="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorWhite"
        app:tabSelectedTextColor="@color/colorWhite"
        app:tabTextColor="@color/colorTextInactive">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stories" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campaigns" />


    </android.support.design.widget.TabLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tab_bar_bottom"
        android:layout_below="@+id/tab_bar_upper"
        android:paddingBottom="@dimen/scroll_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scroll_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/scroll_margin"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar_1"
                android:layout_margin="@dimen/scroll_margin"
                />

            <LinearLayout
                android:id="@+id/profile_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toStartOf="@+id/btn_more"
                android:layout_toEndOf="@+id/img_avatar"
                android:layout_alignTop="@+id/img_avatar"
                android:layout_alignBottom="@+id/img_avatar"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_offset"
                    android:textColor="@color/colorTextBlack"
                    android:text="@string/name" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTabInactive"
                    android:text="@string/status" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/img_avatar"
                android:layout_alignBottom="@+id/img_avatar"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/small_offset"
                android:src="@drawable/ic_more" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/image_story"
                    android:scaleType="centerCrop"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ornaments_1"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/scroll_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:scaleType="centerCrop"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ornaments_2"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/scroll_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:scaleType="centerCrop"
                    android:scaleX="-1"
                    android:scaleY="-1"
                    />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scroll_margin"
                android:text="@string/large_text"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scroll_margin"
                android:layout_marginRight="@dimen/scroll_margin"
                >

                <ImageButton
                    android:id="@+id/btn_thanks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_margin="@dimen/small_offset"
                    android:src="@drawable/thank_1" />
                <TextView
                    android:id="@+id/txt_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/btn_thanks"
                    android:layout_margin="@dimen/mid_offset"
                    android:text="31"
                    android:textColor="@color/colorPrimary"/>

                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_count"
                    android:layout_marginLeft="@dimen/scroll_margin"
                    android:layout_alignTop="@+id/btn_thanks"
                    android:layout_alignBottom="@+id/btn_thanks"
                    android:background="@android:color/transparent"
                    android:src="@drawable/share_0" />


                <Button
                    android:id="@+id/btn_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/btn_thanks"
                    android:layout_alignBottom="@+id/btn_thanks"
                    android:text="@string/send_a_gift"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/share_0" />
            </RelativeLayout>

        </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.TabLayout
        android:id="@+id/tab_bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        app:tabIndicatorColor="@color/colorWhite"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/colorTabInactive">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/feed_1"
            android:text="@string/feed" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/scanner_0"

            android:text="@string/scanner" />


        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/gifts_0"
            android:text="@string/gifts" />


        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/profile_0"
            android:text="@string/profile" />

    </android.support.design.widget.TabLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tab_bar_bottom"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/add" />

</RelativeLayout>
